--- a/src/styles/components/_add-options.scss
+++ b/src/styles/components/_add-options.scss
@@ -1,5 +1,5 @@
 .add-option-error {
-  color: $off-grey;
+  color: $white-text;
   font-style: italic;
   padding: 0 $m-size;
   margin: $m-size 0 0 0;
